--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,10 +8,16 @@ services:
             POSTGRES_DB: money
             POSTGRES_PASSWORD: STy6KEnk
 
-    flyway:
+    flyway-docker-db:
         image: flyway/flyway
         command: -url=jdbc:postgresql://db:5432/money -user=postgres -password=STy6KEnk -connectRetries=60 migrate
         volumes:
             - ./sql:/flyway/sql
         depends_on:
             - db
+
+    # flyway-local-db:
+    #     image: flyway/flyway
+    #     command: -url=jdbc:postgresql://host.docker.internal:5555/money -user=postgres -password=STy6KEnk -connectRetries=60 migrate
+    #     volumes:
+    #         - ./sql:/flyway/sql
